# codegen/target/generated-sources/openapi/src/main/resources/openapi.yaml
@@ -15,7 +15,7 @@ paths:
             application/json:
               schema:
                 items:
-                  $ref: '#/components/schemas/Students'
+                  $ref: '#/components/schemas/StudentsDto'
                 type: array
           description: Успешный ответ со списком студентов
         "400":
@@ -38,7 +38,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Student'
+              $ref: '#/components/schemas/StudentDto'
         required: true
       responses:
         "200":
@@ -46,7 +46,7 @@ paths:
             application/json:
               schema:
                 items:
-                  $ref: '#/components/schemas/Student'
+                  $ref: '#/components/schemas/StudentDto'
                 type: array
           description: Успешный ответ с созданным студентом
         "400":
@@ -114,7 +114,7 @@ paths:
             application/json:
               schema:
                 items:
-                  $ref: '#/components/schemas/Student'
+                  $ref: '#/components/schemas/StudentDto'
                 type: array
           description: Успешный ответ с одним студентом
         "400":
@@ -133,7 +133,7 @@ paths:
       - tag: students
 components:
   schemas:
-    Student:
+    StudentDto:
       example:
         firstName: Ivan
         lastName: Ivanov
@@ -169,7 +169,7 @@ components:
       type: object
       xml:
         name: student
-    Subject:
+    SubjectDto:
       properties:
         id:
           format: int64
@@ -182,9 +182,9 @@ components:
       type: object
       xml:
         name: subject
-    Students:
+    StudentsDto:
       items:
-        $ref: '#/components/schemas/Student'
+        $ref: '#/components/schemas/StudentDto'
       type: array
     Error:
       properties:
